service-nodeport-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-nodeport
  name: nginx-nodeport
spec:
  ports:
  - name: 1180-8080
    port: 1180
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: nginx
  type: NodePort
status:
  loadBalancer: {}
